# espidf-webmanager

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/webmanager/: .gitignore  CMakeLists.txt  README.md
components/webmanager/builder/: esp32.ts  gulpfile.ts  gulpfile_config.ts  gulpfile_sensact.ts  gulpfile_usersettings.ts  gulpfile_utils.ts  hostname.txt  package-lock.json  package.json  paths.ts
components/webmanager/certificates/: host.pem.crt  host.pem.prvtkey  rootCA.pem.crt  rootCA.pem.prvtkey  testserver.pem.crt  testserver.pem.prvtkey
components/webmanager/cpp/: fingerprint.hh  fingerprint_hardware.hh  fingerprint_timer.hh  interfaces.hh  scheduler.hh  scheduler_timers.hh  sunsetsunrise.cc  sunsetsunrise.hh  timer.hh  timetable.hh  user_settings.hh  webmanager.hh  webmanager_constants.hh  webmanager_messagecodes.hh  webmanager_utils.hh
components/webmanager/flatbuffers/: app.fbs  fingerprint.fbs  scheduler.fbs  wifi.fbs
components/webmanager/testserver/: index.ts  package-lock.json  package.json
components/webmanager/testserver/helper/: schedule_generator.ts  timeseries_generator.ts
components/webmanager/web/: package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
components/webmanager/webui_htmlscss/: app.html  app.scss
components/webmanager/webui_logic/: app.ts  app_management.ts  dialog_controller.ts  sensactapps_base.ts  sensactapps_copied_during_build.ts  tsconfig.json  usersettings_base.ts  usersettings_copied_during_build.ts  utils.ts
main/: CMakeLists.txt  led_manager.hh  (+3 more)
(+45 files in other folders)
